Add PyInstaller support to bundle Qt app as a single executable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,10 @@ classifiers = [
 
 dynamic = ["version"]
 
+[project.optional-dependencies]
+dev = [
+    "pyinstaller"
+]
 [project.urls]
 Homepage = "https://github.com/denizsafak/abogen"
 Documentation = "https://github.com/denizsafak/abogen"
